--- a/src/ui/components/categoryRow.ejs
+++ b/src/ui/components/categoryRow.ejs
@@ -18,6 +18,6 @@
         <%= item.status ? "Kích hoạt" : "Chờ kích hoạt" %>
     </td>
     <td class="px-6 py-2 text-lg">
-        Chi tiết
+        <a href="/category/<%= item._id %>">Chi tiết</a>
     </td>
 </tr>
