--- a/src/ui/pages/main.ejs
+++ b/src/ui/pages/main.ejs
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/sidebar.css">
+    <link rel="stylesheet" href="/stylesheets/mainStyles.css">
     <link rel="stylesheet" href="/stylesheets/Font/themify-icons-font/themify-icons/themify-icons.css">
 
 </head>
@@ -26,6 +26,9 @@
     <% break;
     case 'addCategory': %>
     <%- include('../pages/sub/addCategory') %>
+    <% break;
+    case 'categoryDetail': %>
+    <%- include('../pages/sub/categoryDetail') %>
     <% break;
     case 'product': %>
 
