--- a/src/ui/pages/main/categories.ejs
+++ b/src/ui/pages/main/categories.ejs
@@ -32,7 +32,7 @@
             <% }); %>
         <% }else { %>
             <tr class="w-full justify-center items-center bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-                <td class="text-base w-full text-center p-3 italic font-medium text-gray-900 dark:text-white">Không
+                <td colspan="5" class="text-base w-full text-center p-3 italic font-medium text-gray-900 dark:text-white">Không
                     có danh mục nào
                 </td>
             </tr>
