--- a/src/ui/pages/main/categories.ejs
+++ b/src/ui/pages/main/categories.ejs
@@ -1,6 +1,6 @@
 <div class="background-color w-full flex flex-column justify-between items-center rounded-lg mb-5 py-4 px-3 ">
     <h1>Quản lý danh mục</h1>
-    <a class="btn" href="category/insert">Thêm mới</a>
+    <a class="btn" href="categories/new">Thêm mới</a>
 </div>
 
 <div class="relative overflow-x-auto rounded-lg">
@@ -39,7 +39,4 @@
         <% } %>
         </tbody>
     </table>
-</div>
-
-
 </div>
