--- a/src/ui/pages/sub/addCategory.ejs
+++ b/src/ui/pages/sub/addCategory.ejs
@@ -15,7 +15,7 @@
         <h2 class="md:col-span-1">Ảnh danh mục</h2>
         <div class="md:col-span-3">
             <input class=" block w-full text-sm p-1.5 text-gray-900 border border-gray-300 rounded-lg cursor-pointer dark:text-gray-400 focus:outline-none dark:border-gray-600 dark:placeholder-gray-400"
-                   name="image" id="category_image" type="file" autocomplete="off"/>
+                   name="file" id="category_image" type="file" autocomplete="off"/>
             <span id="category_image_error" class="text-red-500 mt-1 text-sm"></span>
         </div>
     </div>
