--- a/src/ui/components/categoryRow.ejs
+++ b/src/ui/components/categoryRow.ejs
@@ -1,6 +1,6 @@
 <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
     <th scope="row" class="px-6 py-2 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-        <img src="<%= item.imageUrl %>"
+        <img src="<%= item.thumbnail %>"
              class="w-16 rounded-lg md:w-32 max-w-[50px] max-h-[50px] md:max-w-[65px] md:max-h-[65px] object-cover object-center"
              alt="Image Url">
     </th>
@@ -18,6 +18,6 @@
         <%= item.status ? "Kích hoạt" : "Chờ kích hoạt" %>
     </td>
     <td class="px-6 py-2 text-lg">
-        <a href="/category/<%= item._id %>">Chi tiết</a>
+        <a href="/categories/<%= item._id %>">Chi tiết</a>
     </td>
 </tr>
