--- a/src/ui/components/sidebar.ejs
+++ b/src/ui/components/sidebar.ejs
@@ -44,7 +44,7 @@
             </li>
             <li>
                 <a
-                        href="/category"
+                        href="/categories"
                         class="btn <% if(active === 'category'){ %>selected<% } %>"
                 >
                     <i class="ti-layers"></i>
