--- a/src/ui/pages/sub/categoryDetail.ejs
+++ b/src/ui/pages/sub/categoryDetail.ejs
@@ -2,7 +2,7 @@
     <h1 class="text-xl font-bold">Chi tiết danh mục</h1>
 
     <div class="mt-3 w-full flex flex-col md:flex-row md:justify-start">
-        <img src="<%= category.imageUrl %>"
+        <img src="<%= category.thumbnail %>"
              class="rounded-lg md:w-45 max-w-full md:max-w-[300px] md:max-h-[300px] object-cover object-center"
              alt="Image Url">
         <div class="md:ms-4">
@@ -32,7 +32,7 @@
                 class="w-full md:w-1/3 py-2.5 px-4 mt-4 md:mt-0 md:ms-5 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
             Xóa
         </button>
-        <a href="/category"
+        <a href="/categories"
            class="w-full md:w-1/3 flex items-center justify-center py-2.5 px-4 mt-4 md:mt-0 md:ms-5 text-sm font-medium text-gray-900 focus:outline-none bg-gray-200 rounded-lg border border-gray-300 hover:bg-gray-300 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-700 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-600">
             Đóng
         </a>
