--- a/src/ui/pages/sub/updateCategory.ejs
+++ b/src/ui/pages/sub/updateCategory.ejs
@@ -40,7 +40,7 @@
                         <label class="block mt-4 mb-2 text-sm font-medium text-gray-900 dark:text-white"
                                for="image">Ảnh danh mục</label>
                         <input class="p-1.5 block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
-                               aria-describedby="user_avatar_help" name="image" id="image"
+                               aria-describedby="user_avatar_help" name="file" id="image"
                                type="file">
                     </div>
 
